@@ -389,6 +389,9 @@ Other Changes
 * SOLR-4854: Add a test to assert that [elevated] DocTransfer works correctly with javabin
   response format. (Ray, shalin)
 
+* SOLR-8196: TestMiniSolrCloudCluster.testStopAllStartAll case plus necessary
+  MiniSolrCloudCluster tweak (Christine Poerschke)
+
 ==================  5.3.1 ==================
 
 Bug Fixes
